# quickstart-android-cpp

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/libs/: .gitignore
app/src/androidTest/java/com/banuba/sdk/example/quickstart_cpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/effects/Afro/: afro_1.bsm2  cfg.toml  config.json  glass.frag  glass.vert  hair.frag  half.vert  nop.frag  pbr_hdr.frag  retouch.frag
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libraries/: CMakeLists.txt
app/src/main/cpp/libraries/ogl_utils/: CMakeLists.txt
app/src/main/cpp/libraries/ogl_utils/include/: opengl.hpp  program.hpp  singleton.hpp
app/src/main/cpp/libraries/ogl_utils/src/: opengl.cpp  program.cpp
app/src/main/cpp/libraries/utils/: CMakeLists.txt
app/src/main/cpp/libraries/utils/include/: thread_pool.h
app/src/main/cpp/offscreen_render_target/: CMakeLists.txt
app/src/main/cpp/offscreen_render_target/include/: offscreen_render_target.hpp
app/src/main/cpp/offscreen_render_target/src/: offscreen_render_target.cpp
app/src/main/java/com/banuba/sdk/example/common/: BanubaClientToken.kt
app/src/main/java/com/banuba/sdk/example/quickstart_cpp/: BanubaSdk.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/banuba/sdk/example/quickstart_cpp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
